@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,8 +24,9 @@
 /**
  * @test
  * @summary Verifies JVMTI support for VThreads.
- * @compile --enable-preview -source ${jdk.version} VThreadTest.java
- * @run main/othervm/native --enable-preview -agentlib:VThreadTest VThreadTest
+ * @requires vm.continuations
+ * @compile VThreadTest.java
+ * @run main/othervm/native -agentlib:VThreadTest VThreadTest
  */
 
 import java.util.concurrent.*;
